# sre_metrics

./: LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: fastapi_app.py  flask_app.py
src/sre_metrics/: __init__.py  core.py  fastapi.py  flask.py
tests/: conftest.py  test_fastapi.py  test_flask.py
